2009-03-17 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Added handling of big/little endian buffers.

2009-03-11 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Changed processing from one stereo sample to more.

2009-03-06 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* libsndfile v1.0.17 -> v1.0.19.
	* Added more systems compatability (Integer types changed).
	* Move to new API.
	* Fixed 24bit data Native-bigendian handling.

2009-02-18 Sebastian Pipping <sebastian@pipping.org>
	* Shared lib (*nix) project started.

2009-02-17 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Sources are reorganized.

2009-02-02 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.2.0

	* Dynamic variables for multiply instances are used.
	* Compiled by MS VC++ 2008.
	* Nothing changed for a sound.

2006-11-14 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.1.0

	* Three new 'Easy' levels added.
	'High easy' level is close to Chu Moy's version of crossfeeder
	(http://headwize.com/projects/showfile.php?file=cmoy1_prj.htm)

2006-09-22 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.0.0

	* Change of license.
	* Package divided by library and plugins.
	* foobar2000 0.8 plugin package created.

2006-03-28 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.0.0b2 - test prerelease.

	* New plugin for foobar2000 0.9.
	* Plugin for foobar2000 0.8 have removed.
	* New look of configuration windows of plugins.
	* Default coefficients of default middle crossfeed level and of
	44100 Hz sampling rate was staticaly implemeted to bs2b library.

2006-03-07 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.0.0b - test prerelease.
	
	* The new high frequency boost filter have implemented.
	The old version	of high-boost filter have been realized
	by two-step recursive filter for computation power conserving
	by subtraction of low-pass filter signal. The new method is
	a one-step recursive filter. It has done to provide an adjusted
	cut frequency value for more smooth frequency responce of
	resulting signal.